Started implementing client - server connectifities.

--- a/ClassLibrary1/SleepControlLib.csproj
+++ b/ClassLibrary1/SleepControlLib.csproj
@@ -40,12 +40,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Worker.cs" />
-    <Compile Include="NetworkTrafficStriker.cs" />
-    <Compile Include="Strikeable.cs" />
+    <Compile Include="ISleppControllerConfig.cs" />
+    <Compile Include="Sockets\AsynchronousClient.cs" />
+    <Compile Include="Sockets\AsynchronousSocketListener.cs" />
+    <Compile Include="Strikers\Worker.cs" />
+    <Compile Include="Strikers\NetworkTraffic\NetworkTrafficStriker.cs" />
+    <Compile Include="Strikers\Strikeable.cs" />
     <Compile Include="SleepController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
